kubernetes/wazuh/wazuh-indexer/wazuh-indexer-service.yml
apiVersion: v1
kind: Service
metadata:
  name: wazuh-indexer-service
  namespace: wazuh
spec:
  ports:
  - port: 9200
    targetPort: 9200
  selector:
    app: wazuh
  type: LoadBalancer
