kubernetes/wazuh/wazuh-indexer/wazuh-indexer-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wazuh-indexer-ingress
  namespace: wazuh
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: wazuh-indexer.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wazuh-indexer-service
            port:
              number: 9200
